tdf#116676 - Implement insertTextPortion of XTextPortionAppend interface

Change-Id: I4ff9394f03569581b5f11f0aaa8d4201905351fa